
Version 2.1.0.0  - 2008/02/15

		* groupchats: clickable nicknames can now be colorized. Patch by theMiron
		  (h++ author).
		
		* reworked message log settings
		  see: http://miranda.or.at/Blog:Tabsrmm_changes_2_1_0_0 for details.

		* compatibility with Miranda 0.7 no longer given. 2.0.0.5 was branched
		  as stable tree for 0.7 users.
		  
Version 2.0.0.5  - 2008/01/02

		* increased timer for info panel tooltips to 1 sec (previously, it was set
		  to 500msec which may be too short and trigger unwanted tooltips).

		* some better automatic detection for the MathMod plugin.
		
		* changed tree controls on option pages to use simple checkboxes 
		  instead of image lists.
		
Version 2.0.0.4  - 2007/12/23

        + added incremental search feature to the group chat userlist. Simply
          type what you want to find and it will be highlighted. Using cursor keys
          to move the selection will clear the current search string. Typing
          something which does not exist will also clear the current seach string
          and start over.
        ! fixed missing checkmarks in the message log submenu of the containers
          menu bar.
        ! fixed untranslateable strings in the container options dialog
        - disabled skin editor for tabsrmm (still not complete, avoid confusing 
          people :) ).
        ! fixed minor issue with double icons in status bar (on rare occasions)
        ! fixed skin drawing on multimonitor systems (patch by Bryan)
        
Version 2.0.0.3  - 2007/11/29 (released with 0.8 alpha #5)

        * changed per contact filter system in group chats
        ! "revert splitter" option fixed for group chats.
        ! "sync splitter with groupchats" option - fixed small (1px) alignment
          bug
        ! fixed idle time for metacontacts (may not work with older versions of
          metacontacts plugin, so please update).
        - removed active status message retrieval when hovering info panel. 